@@ -1,5 +1,5 @@
 /*
- * Copyright ConsenSys AG.
+ * Copyright contributors to Besu.
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
  * the License. You may obtain a copy of the License at
@@ -39,6 +39,19 @@ import org.hyperledger.besu.ethereum.p2p.discovery.DiscoveryPeer;
 import org.hyperledger.besu.ethereum.p2p.discovery.Endpoint;
 import org.hyperledger.besu.ethereum.p2p.discovery.PeerDiscoveryStatus;
 import org.hyperledger.besu.ethereum.p2p.discovery.PeerDiscoveryTestHelper;
+import org.hyperledger.besu.ethereum.p2p.discovery.internal.packet.DaggerPacketPackage;
+import org.hyperledger.besu.ethereum.p2p.discovery.internal.packet.Packet;
+import org.hyperledger.besu.ethereum.p2p.discovery.internal.packet.PacketData;
+import org.hyperledger.besu.ethereum.p2p.discovery.internal.packet.PacketPackage;
+import org.hyperledger.besu.ethereum.p2p.discovery.internal.packet.enrrequest.EnrRequestPacketData;
+import org.hyperledger.besu.ethereum.p2p.discovery.internal.packet.enrresponse.EnrResponsePacketData;
+import org.hyperledger.besu.ethereum.p2p.discovery.internal.packet.findneighbors.FindNeighborsPacketData;
+import org.hyperledger.besu.ethereum.p2p.discovery.internal.packet.neighbors.NeighborsPacketData;
+import org.hyperledger.besu.ethereum.p2p.discovery.internal.packet.ping.PingPacketData;
+import org.hyperledger.besu.ethereum.p2p.discovery.internal.packet.ping.PingPacketDataFactory;
+import org.hyperledger.besu.ethereum.p2p.discovery.internal.packet.pong.PongPacketData;
+import org.hyperledger.besu.ethereum.p2p.discovery.internal.packet.validation.EndpointValidator;
+import org.hyperledger.besu.ethereum.p2p.discovery.internal.packet.validation.ExpiryValidator;
 import org.hyperledger.besu.ethereum.p2p.peers.EnodeURLImpl;
 import org.hyperledger.besu.ethereum.p2p.peers.Peer;
 import org.hyperledger.besu.ethereum.p2p.permissions.PeerPermissions;
@@ -47,7 +60,9 @@ import org.hyperledger.besu.ethereum.p2p.permissions.PeerPermissionsDenylist;
 import org.hyperledger.besu.ethereum.p2p.rlpx.RlpxAgent;
 import org.hyperledger.besu.metrics.noop.NoOpMetricsSystem;
 
+import java.time.Clock;
 import java.time.Instant;
+import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -94,6 +109,7 @@ public class PeerDiscoveryControllerTest {
   private NodeKey localNodeKey;
   private final AtomicInteger counter = new AtomicInteger(1);
   private final PeerDiscoveryTestHelper helper = new PeerDiscoveryTestHelper();
+  private PacketPackage packetPackage;
 
   private static Long longDelayFunction(final Long prev) {
     return 999999999L;
@@ -109,6 +125,7 @@ public class PeerDiscoveryControllerTest {
     localNodeKey = nodeKeys.get(0);
     localPeer = helper.createDiscoveryPeer(localNodeKey);
     peerTable = new PeerTable(localPeer.getId());
+    packetPackage = DaggerPacketPackage.create();
   }
 
   @AfterEach
@@ -138,9 +155,14 @@ public class PeerDiscoveryControllerTest {
     // Mock the creation of the PING packet, so that we can control the hash,
     // which gets validated when receiving the PONG.
     final PingPacketData mockPing =
-        PingPacketData.create(
-            Optional.ofNullable(localPeer.getEndpoint()), peers.get(0).getEndpoint(), UInt64.ONE);
-    final Packet mockPacket = Packet.create(PacketType.PING, mockPing, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(
+                Optional.ofNullable(localPeer.getEndpoint()),
+                peers.get(0).getEndpoint(),
+                UInt64.ONE);
+    final Packet mockPacket =
+        packetPackage.packetFactory().create(PacketType.PING, mockPing, nodeKeys.get(0));
     mockPingPacketCreation(mockPacket);
 
     controller.start();
@@ -210,9 +232,14 @@ public class PeerDiscoveryControllerTest {
     // Mock the creation of the PING packet, so that we can control the hash,
     // which gets validated when receiving the PONG.
     final PingPacketData mockPing =
-        PingPacketData.create(
-            Optional.ofNullable(localPeer.getEndpoint()), peers.get(0).getEndpoint(), UInt64.ONE);
-    final Packet mockPacket = Packet.create(PacketType.PING, mockPing, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(
+                Optional.ofNullable(localPeer.getEndpoint()),
+                peers.get(0).getEndpoint(),
+                UInt64.ONE);
+    final Packet mockPacket =
+        packetPackage.packetFactory().create(PacketType.PING, mockPing, nodeKeys.get(0));
     mockPingPacketCreation(mockPacket);
 
     controller.start();
@@ -229,8 +256,11 @@ public class PeerDiscoveryControllerTest {
 
     // Simulate a PONG message from peer 0.
     final PongPacketData packetData =
-        PongPacketData.create(localPeer.getEndpoint(), mockPacket.getHash(), UInt64.ONE);
-    final Packet packet = Packet.create(PacketType.PONG, packetData, nodeKeys.get(0));
+        packetPackage
+            .pongPacketDataFactory()
+            .create(localPeer.getEndpoint(), mockPacket.getHash(), UInt64.ONE);
+    final Packet packet =
+        packetPackage.packetFactory().create(PacketType.PONG, packetData, nodeKeys.get(0));
     controller.onMessage(packet, peers.get(0));
 
     // Invoke timers again
@@ -265,9 +295,14 @@ public class PeerDiscoveryControllerTest {
     // Mock the creation of the PING packet, so that we can control the hash,
     // which gets validated when receiving the PONG.
     final PingPacketData mockPing =
-        PingPacketData.create(
-            Optional.ofNullable(localPeer.getEndpoint()), peers.get(0).getEndpoint(), UInt64.ONE);
-    final Packet mockPacket = Packet.create(PacketType.PING, mockPing, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(
+                Optional.ofNullable(localPeer.getEndpoint()),
+                peers.get(0).getEndpoint(),
+                UInt64.ONE);
+    final Packet mockPacket =
+        packetPackage.packetFactory().create(PacketType.PING, mockPing, nodeKeys.get(0));
     mockPingPacketCreation(mockPacket);
 
     controller.start();
@@ -301,9 +336,11 @@ public class PeerDiscoveryControllerTest {
     // Setup ping to be sent to discoPeer
     final List<NodeKey> nodeKeys = PeerDiscoveryTestHelper.generateNodeKeys(1);
     final PingPacketData pingPacketData =
-        PingPacketData.create(
-            Optional.ofNullable(localEndpoint), discoPeer.getEndpoint(), UInt64.ONE);
-    final Packet discoPeerPing = Packet.create(PacketType.PING, pingPacketData, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(Optional.ofNullable(localEndpoint), discoPeer.getEndpoint(), UInt64.ONE);
+    final Packet discoPeerPing =
+        packetPackage.packetFactory().create(PacketType.PING, pingPacketData, nodeKeys.get(0));
     mockPingPacketCreation(discoPeer, discoPeerPing);
 
     controller.onMessage(discoPeerPing, discoPeer);
@@ -313,7 +350,7 @@ public class PeerDiscoveryControllerTest {
   }
 
   @Test
-  public void shouldNotRespondToExpiredPingRequest() {
+  public void shouldNotRespondToExpiredPingRequest() throws InterruptedException {
     final List<DiscoveryPeer> peers = createPeersInLastBucket(localPeer, 1);
 
     final DiscoveryPeer discoPeer = peers.get(0);
@@ -329,13 +366,18 @@ public class PeerDiscoveryControllerTest {
 
     // Setup ping to be sent to discoPeer
     final List<NodeKey> nodeKeys = PeerDiscoveryTestHelper.generateNodeKeys(1);
+    Clock fixedClock = Clock.fixed(Instant.ofEpochSecond(123), ZoneId.of("UTC"));
+    PingPacketDataFactory pingPacketDataFactory =
+        new PingPacketDataFactory(
+            new EndpointValidator(), new ExpiryValidator(fixedClock), fixedClock);
     final PingPacketData pingPacketData =
-        PingPacketData.create(
+        pingPacketDataFactory.create(
             Optional.ofNullable(localEndpoint),
             discoPeer.getEndpoint(),
-            Instant.now().getEpochSecond() - PacketData.DEFAULT_EXPIRATION_PERIOD_SEC,
+            fixedClock.instant().getEpochSecond() + 1,
             UInt64.ONE);
-    final Packet discoPeerPing = Packet.create(PacketType.PING, pingPacketData, nodeKeys.get(0));
+    final Packet discoPeerPing =
+        packetPackage.packetFactory().create(PacketType.PING, pingPacketData, nodeKeys.getFirst());
     mockPingPacketCreation(discoPeer, discoPeerPing);
 
     controller.onMessage(discoPeerPing, discoPeer);
@@ -362,9 +404,14 @@ public class PeerDiscoveryControllerTest {
     // Mock the creation of the PING packet, so that we can control the hash, which gets validated
     // when receiving the PONG.
     final PingPacketData mockPing =
-        PingPacketData.create(
-            Optional.ofNullable(localPeer.getEndpoint()), peers.get(0).getEndpoint(), UInt64.ONE);
-    final Packet mockPacket = Packet.create(PacketType.PING, mockPing, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(
+                Optional.ofNullable(localPeer.getEndpoint()),
+                peers.get(0).getEndpoint(),
+                UInt64.ONE);
+    final Packet mockPacket =
+        packetPackage.packetFactory().create(PacketType.PING, mockPing, nodeKeys.get(0));
     mockPingPacketCreation(mockPacket);
 
     controller.start();
@@ -378,8 +425,11 @@ public class PeerDiscoveryControllerTest {
     // Simulate PONG messages from all peers
     for (int i = 0; i < 3; i++) {
       final PongPacketData packetData =
-          PongPacketData.create(localPeer.getEndpoint(), mockPacket.getHash(), UInt64.ONE);
-      final Packet packet0 = Packet.create(PacketType.PONG, packetData, nodeKeys.get(i));
+          packetPackage
+              .pongPacketDataFactory()
+              .create(localPeer.getEndpoint(), mockPacket.getHash(), UInt64.ONE);
+      final Packet packet0 =
+          packetPackage.packetFactory().create(PacketType.PONG, packetData, nodeKeys.get(i));
       controller.onMessage(packet0, peers.get(i));
     }
 
@@ -423,9 +473,14 @@ public class PeerDiscoveryControllerTest {
     // when
     // processing the PONG.
     final PingPacketData mockPing =
-        PingPacketData.create(
-            Optional.ofNullable(localPeer.getEndpoint()), peers.get(0).getEndpoint(), UInt64.ONE);
-    final Packet mockPacket = Packet.create(PacketType.PING, mockPing, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(
+                Optional.ofNullable(localPeer.getEndpoint()),
+                peers.get(0).getEndpoint(),
+                UInt64.ONE);
+    final Packet mockPacket =
+        packetPackage.packetFactory().create(PacketType.PING, mockPing, nodeKeys.get(0));
     mockPingPacketCreation(mockPacket);
 
     controller.start();
@@ -438,8 +493,11 @@ public class PeerDiscoveryControllerTest {
 
     // Send a PONG packet from peer 1, with an incorrect hash.
     final PongPacketData packetData =
-        PongPacketData.create(localPeer.getEndpoint(), Bytes.fromHexString("1212"), UInt64.ONE);
-    final Packet packet = Packet.create(PacketType.PONG, packetData, nodeKeys.get(1));
+        packetPackage
+            .pongPacketDataFactory()
+            .create(localPeer.getEndpoint(), Bytes.fromHexString("1212"), UInt64.ONE);
+    final Packet packet =
+        packetPackage.packetFactory().create(PacketType.PONG, packetData, nodeKeys.get(1));
     controller.onMessage(packet, peers.get(1));
 
     // No FIND_NEIGHBORS packet was sent for peer 1.
@@ -472,9 +530,14 @@ public class PeerDiscoveryControllerTest {
     // Mock the creation of the PING packet, so that we can control the hash, which gets validated
     // when processing the PONG.
     final PingPacketData mockPing =
-        PingPacketData.create(
-            Optional.ofNullable(localPeer.getEndpoint()), peers.get(0).getEndpoint(), UInt64.ONE);
-    final Packet mockPacket = Packet.create(PacketType.PING, mockPing, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(
+                Optional.ofNullable(localPeer.getEndpoint()),
+                peers.get(0).getEndpoint(),
+                UInt64.ONE);
+    final Packet mockPacket =
+        packetPackage.packetFactory().create(PacketType.PING, mockPing, nodeKeys.get(0));
     mockPingPacketCreation(mockPacket);
     controller.setRetryDelayFunction(PeerDiscoveryControllerTest::longDelayFunction);
     controller.start();
@@ -530,11 +593,14 @@ public class PeerDiscoveryControllerTest {
     // Mock the creation of the PING packet, so that we can control the hash, which gets validated
     // when processing the PONG.
     final PingPacketData mockPing =
-        PingPacketData.create(
-            Optional.ofNullable(localPeer.getEndpoint()),
-            peerThatTimesOut.getEndpoint(),
-            UInt64.ONE);
-    final Packet mockPacket = Packet.create(PacketType.PING, mockPing, nodeKey);
+        packetPackage
+            .pingPacketDataFactory()
+            .create(
+                Optional.ofNullable(localPeer.getEndpoint()),
+                peerThatTimesOut.getEndpoint(),
+                UInt64.ONE);
+    final Packet mockPacket =
+        packetPackage.packetFactory().create(PacketType.PING, mockPing, nodeKey);
     mockPingPacketCreation(mockPacket);
     controller.setRetryDelayFunction(PeerDiscoveryControllerTest::longDelayFunction);
     controller.start();
@@ -574,8 +640,9 @@ public class PeerDiscoveryControllerTest {
   private void respondWithPong(
       final DiscoveryPeer discoveryPeer, final NodeKey nodeKey, final Bytes hash) {
     final PongPacketData packetData0 =
-        PongPacketData.create(localPeer.getEndpoint(), hash, UInt64.ONE);
-    final Packet pongPacket0 = Packet.create(PacketType.PONG, packetData0, nodeKey);
+        packetPackage.pongPacketDataFactory().create(localPeer.getEndpoint(), hash, UInt64.ONE);
+    final Packet pongPacket0 =
+        packetPackage.packetFactory().create(PacketType.PONG, packetData0, nodeKey);
     controller.onMessage(pongPacket0, discoveryPeer);
   }
 
@@ -596,9 +663,14 @@ public class PeerDiscoveryControllerTest {
     // Mock the creation of the PING packet, so that we can control the hash, which gets validated
     // when processing the PONG.
     final PingPacketData pingPacketData =
-        PingPacketData.create(
-            Optional.ofNullable(localPeer.getEndpoint()), peers.get(0).getEndpoint(), UInt64.ONE);
-    final Packet pingPacket = Packet.create(PacketType.PING, pingPacketData, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(
+                Optional.ofNullable(localPeer.getEndpoint()),
+                peers.get(0).getEndpoint(),
+                UInt64.ONE);
+    final Packet pingPacket =
+        packetPackage.packetFactory().create(PacketType.PING, pingPacketData, nodeKeys.get(0));
 
     mockPingPacketCreation(pingPacket);
 
@@ -623,8 +695,11 @@ public class PeerDiscoveryControllerTest {
         .hasSize(1);
 
     final PongPacketData pongPacketData =
-        PongPacketData.create(localPeer.getEndpoint(), pingPacket.getHash(), UInt64.ONE);
-    final Packet pongPacket = Packet.create(PacketType.PONG, pongPacketData, nodeKeys.get(1));
+        packetPackage
+            .pongPacketDataFactory()
+            .create(localPeer.getEndpoint(), pingPacket.getHash(), UInt64.ONE);
+    final Packet pongPacket =
+        packetPackage.packetFactory().create(PacketType.PONG, pongPacketData, nodeKeys.get(1));
     controller.onMessage(pongPacket, peers.get(1));
 
     // Now after we got that pong we should have sent a find neighbours message...
@@ -633,9 +708,9 @@ public class PeerDiscoveryControllerTest {
 
     // Simulate a NEIGHBORS message from peer[0] listing peer[2].
     final NeighborsPacketData neighbors0 =
-        NeighborsPacketData.create(Collections.singletonList(peers.get(2)));
+        packetPackage.neighborsPacketDataFactory().create(Collections.singletonList(peers.get(2)));
     final Packet neighborsPacket0 =
-        Packet.create(PacketType.NEIGHBORS, neighbors0, nodeKeys.get(0));
+        packetPackage.packetFactory().create(PacketType.NEIGHBORS, neighbors0, nodeKeys.get(0));
     controller.onMessage(neighborsPacket0, peers.get(0));
 
     // Assert that we're bonded with the third peer.
@@ -647,9 +722,9 @@ public class PeerDiscoveryControllerTest {
     // Simulate bonding and neighbors packet from the second bootstrap peer, with peer[2] reported
     // in the peer list.
     final NeighborsPacketData neighbors1 =
-        NeighborsPacketData.create(Collections.singletonList(peers.get(2)));
+        packetPackage.neighborsPacketDataFactory().create(Collections.singletonList(peers.get(2)));
     final Packet neighborsPacket1 =
-        Packet.create(PacketType.NEIGHBORS, neighbors1, nodeKeys.get(1));
+        packetPackage.packetFactory().create(PacketType.NEIGHBORS, neighbors1, nodeKeys.get(1));
     controller.onMessage(neighborsPacket1, peers.get(1));
 
     verify(outboundMessageHandler, times(1))
@@ -657,8 +732,11 @@ public class PeerDiscoveryControllerTest {
 
     // Send a PONG packet from peer[2], to transition it to the BONDED state.
     final PongPacketData packetData2 =
-        PongPacketData.create(localPeer.getEndpoint(), pingPacket.getHash(), UInt64.ONE);
-    final Packet pongPacket2 = Packet.create(PacketType.PONG, packetData2, nodeKeys.get(2));
+        packetPackage
+            .pongPacketDataFactory()
+            .create(localPeer.getEndpoint(), pingPacket.getHash(), UInt64.ONE);
+    final Packet pongPacket2 =
+        packetPackage.packetFactory().create(PacketType.PONG, packetData2, nodeKeys.get(2));
     controller.onMessage(pongPacket2, peers.get(2));
 
     // Assert we're now bonded with peer[2].
@@ -741,9 +819,11 @@ public class PeerDiscoveryControllerTest {
     // Setup ping to be sent to discoPeer
     List<NodeKey> nodeKeys = PeerDiscoveryTestHelper.generateNodeKeys(1);
     PingPacketData pingPacketData =
-        PingPacketData.create(
-            Optional.ofNullable(localEndpoint), discoPeer.getEndpoint(), UInt64.ONE);
-    final Packet discoPeerPing = Packet.create(PacketType.PING, pingPacketData, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(Optional.ofNullable(localEndpoint), discoPeer.getEndpoint(), UInt64.ONE);
+    final Packet discoPeerPing =
+        packetPackage.packetFactory().create(PacketType.PING, pingPacketData, nodeKeys.get(0));
     mockPingPacketCreation(discoPeer, discoPeerPing);
 
     controller.start();
@@ -760,17 +840,21 @@ public class PeerDiscoveryControllerTest {
     // Setup ping to be sent to otherPeer after neighbors packet is received
     nodeKeys = PeerDiscoveryTestHelper.generateNodeKeys(1);
     pingPacketData =
-        PingPacketData.create(
-            Optional.ofNullable(localEndpoint), otherPeer.getEndpoint(), UInt64.ONE);
-    final Packet pingPacket = Packet.create(PacketType.PING, pingPacketData, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(Optional.ofNullable(localEndpoint), otherPeer.getEndpoint(), UInt64.ONE);
+    final Packet pingPacket =
+        packetPackage.packetFactory().create(PacketType.PING, pingPacketData, nodeKeys.get(0));
     mockPingPacketCreation(otherPeer, pingPacket);
 
     // Setup ping to be sent to otherPeer2 after neighbors packet is received
     nodeKeys = PeerDiscoveryTestHelper.generateNodeKeys(1);
     pingPacketData =
-        PingPacketData.create(
-            Optional.ofNullable(localEndpoint), otherPeer2.getEndpoint(), UInt64.ONE);
-    final Packet pingPacket2 = Packet.create(PacketType.PING, pingPacketData, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(Optional.ofNullable(localEndpoint), otherPeer2.getEndpoint(), UInt64.ONE);
+    final Packet pingPacket2 =
+        packetPackage.packetFactory().create(PacketType.PING, pingPacketData, nodeKeys.get(0));
     mockPingPacketCreation(otherPeer2, pingPacket2);
 
     final Packet neighborsPacket =
@@ -825,9 +909,11 @@ public class PeerDiscoveryControllerTest {
     // Setup ping to be sent to discoPeer
     List<NodeKey> nodeKeys = PeerDiscoveryTestHelper.generateNodeKeys(1);
     PingPacketData pingPacketData =
-        PingPacketData.create(
-            Optional.ofNullable(localEndpoint), discoPeer.getEndpoint(), UInt64.ONE);
-    final Packet discoPeerPing = Packet.create(PacketType.PING, pingPacketData, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(Optional.ofNullable(localEndpoint), discoPeer.getEndpoint(), UInt64.ONE);
+    final Packet discoPeerPing =
+        packetPackage.packetFactory().create(PacketType.PING, pingPacketData, nodeKeys.get(0));
     mockPingPacketCreation(discoPeer, discoPeerPing);
 
     controller.start();
@@ -843,17 +929,21 @@ public class PeerDiscoveryControllerTest {
     // Setup ping to be sent to otherPeer after neighbors packet is received
     nodeKeys = PeerDiscoveryTestHelper.generateNodeKeys(1);
     pingPacketData =
-        PingPacketData.create(
-            Optional.ofNullable(localEndpoint), otherPeer.getEndpoint(), UInt64.ONE);
-    final Packet pingPacket = Packet.create(PacketType.PING, pingPacketData, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(Optional.ofNullable(localEndpoint), otherPeer.getEndpoint(), UInt64.ONE);
+    final Packet pingPacket =
+        packetPackage.packetFactory().create(PacketType.PING, pingPacketData, nodeKeys.get(0));
     mockPingPacketCreation(otherPeer, pingPacket);
 
     // Setup ping to be sent to otherPeer2 after neighbors packet is received
     nodeKeys = PeerDiscoveryTestHelper.generateNodeKeys(1);
     pingPacketData =
-        PingPacketData.create(
-            Optional.ofNullable(localEndpoint), otherPeer2.getEndpoint(), UInt64.ONE);
-    final Packet pingPacket2 = Packet.create(PacketType.PING, pingPacketData, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(Optional.ofNullable(localEndpoint), otherPeer2.getEndpoint(), UInt64.ONE);
+    final Packet pingPacket2 =
+        packetPackage.packetFactory().create(PacketType.PING, pingPacketData, nodeKeys.get(0));
     mockPingPacketCreation(otherPeer2, pingPacket2);
 
     // Denylist peer
@@ -885,9 +975,11 @@ public class PeerDiscoveryControllerTest {
     // Setup ping to be sent to discoPeer
     final List<NodeKey> nodeKeys = PeerDiscoveryTestHelper.generateNodeKeys(1);
     final PingPacketData pingPacketData =
-        PingPacketData.create(
-            Optional.ofNullable(localEndpoint), discoPeer.getEndpoint(), UInt64.ONE);
-    final Packet discoPeerPing = Packet.create(PacketType.PING, pingPacketData, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(Optional.ofNullable(localEndpoint), discoPeer.getEndpoint(), UInt64.ONE);
+    final Packet discoPeerPing =
+        packetPackage.packetFactory().create(PacketType.PING, pingPacketData, nodeKeys.get(0));
     mockPingPacketCreation(discoPeer, discoPeerPing);
 
     controller.start();
@@ -926,9 +1018,11 @@ public class PeerDiscoveryControllerTest {
     // Setup ping to be sent to discoPeer
     final List<NodeKey> nodeKeys = PeerDiscoveryTestHelper.generateNodeKeys(1);
     final PingPacketData pingPacketData =
-        PingPacketData.create(
-            Optional.ofNullable(localEndpoint), discoPeer.getEndpoint(), UInt64.ONE);
-    final Packet discoPeerPing = Packet.create(PacketType.PING, pingPacketData, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(Optional.ofNullable(localEndpoint), discoPeer.getEndpoint(), UInt64.ONE);
+    final Packet discoPeerPing =
+        packetPackage.packetFactory().create(PacketType.PING, pingPacketData, nodeKeys.get(0));
     mockPingPacketCreation(discoPeer, discoPeerPing);
 
     controller.start();
@@ -949,7 +1043,7 @@ public class PeerDiscoveryControllerTest {
   }
 
   @Test
-  public void shouldNotRespondToExpiredNeighborsRequest() {
+  public void shouldNotRespondToExpiredNeighborsRequest() throws InterruptedException {
     final List<DiscoveryPeer> peers = createPeersInLastBucket(localPeer, 1);
 
     final DiscoveryPeer discoPeer = peers.get(0);
@@ -966,9 +1060,11 @@ public class PeerDiscoveryControllerTest {
     // Setup ping to be sent to discoPeer
     final List<NodeKey> nodeKeys = PeerDiscoveryTestHelper.generateNodeKeys(1);
     final PingPacketData pingPacketData =
-        PingPacketData.create(
-            Optional.ofNullable(localEndpoint), discoPeer.getEndpoint(), UInt64.ONE);
-    final Packet discoPeerPing = Packet.create(PacketType.PING, pingPacketData, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(Optional.ofNullable(localEndpoint), discoPeer.getEndpoint(), UInt64.ONE);
+    final Packet discoPeerPing =
+        packetPackage.packetFactory().create(PacketType.PING, pingPacketData, nodeKeys.get(0));
     mockPingPacketCreation(discoPeer, discoPeerPing);
 
     controller.start();
@@ -982,8 +1078,7 @@ public class PeerDiscoveryControllerTest {
         .send(eq(discoPeer), matchPacketOfType(PacketType.FIND_NEIGHBORS));
 
     final Packet findNeighborsPacket =
-        MockPacketDataFactory.mockFindNeighborsPacket(
-            discoPeer, Instant.now().getEpochSecond() - PacketData.DEFAULT_EXPIRATION_PERIOD_SEC);
+        MockPacketDataFactory.mockFindNeighborsPacket(discoPeer, 123);
     controller.onMessage(findNeighborsPacket, discoPeer);
 
     verify(outboundMessageHandler, times(0))
@@ -1010,9 +1105,11 @@ public class PeerDiscoveryControllerTest {
     // Setup ping to be sent to discoPeer
     final List<NodeKey> nodeKeys = PeerDiscoveryTestHelper.generateNodeKeys(1);
     final PingPacketData pingPacketData =
-        PingPacketData.create(
-            Optional.ofNullable(localEndpoint), discoPeer.getEndpoint(), UInt64.ONE);
-    final Packet discoPeerPing = Packet.create(PacketType.PING, pingPacketData, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(Optional.ofNullable(localEndpoint), discoPeer.getEndpoint(), UInt64.ONE);
+    final Packet discoPeerPing =
+        packetPackage.packetFactory().create(PacketType.PING, pingPacketData, nodeKeys.get(0));
     mockPingPacketCreation(discoPeer, discoPeerPing);
 
     controller.start();
@@ -1040,9 +1137,14 @@ public class PeerDiscoveryControllerTest {
     // Mock the creation of the PING packet to control hash for PONG.
     final List<NodeKey> nodeKeys = PeerDiscoveryTestHelper.generateNodeKeys(1);
     final PingPacketData pingPacketData =
-        PingPacketData.create(
-            Optional.ofNullable(localPeer.getEndpoint()), peers.get(0).getEndpoint(), UInt64.ONE);
-    final Packet pingPacket = Packet.create(PacketType.PING, pingPacketData, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(
+                Optional.ofNullable(localPeer.getEndpoint()),
+                peers.get(0).getEndpoint(),
+                UInt64.ONE);
+    final Packet pingPacket =
+        packetPackage.packetFactory().create(PacketType.PING, pingPacketData, nodeKeys.get(0));
 
     final OutboundMessageHandler outboundMessageHandler = mock(OutboundMessageHandler.class);
     controller =
@@ -1080,9 +1182,14 @@ public class PeerDiscoveryControllerTest {
     // Mock the creation of PING packets to control hash PONG packets.
     final List<NodeKey> nodeKeys = PeerDiscoveryTestHelper.generateNodeKeys(1);
     final PingPacketData pingPacketData =
-        PingPacketData.create(
-            Optional.ofNullable(localPeer.getEndpoint()), peers.get(0).getEndpoint(), UInt64.ONE);
-    final Packet pingPacket = Packet.create(PacketType.PING, pingPacketData, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(
+                Optional.ofNullable(localPeer.getEndpoint()),
+                peers.get(0).getEndpoint(),
+                UInt64.ONE);
+    final Packet pingPacket =
+        packetPackage.packetFactory().create(PacketType.PING, pingPacketData, nodeKeys.get(0));
     mockPingPacketCreation(pingPacket);
 
     controller.start();
@@ -1140,9 +1247,14 @@ public class PeerDiscoveryControllerTest {
     // Mock the creation of the PING packet to control hash for PONG.
     final List<NodeKey> nodeKeys = PeerDiscoveryTestHelper.generateNodeKeys(1);
     final PingPacketData pingPacketData =
-        PingPacketData.create(
-            Optional.ofNullable(localPeer.getEndpoint()), peers.get(0).getEndpoint(), UInt64.ONE);
-    final Packet pingPacket = Packet.create(PacketType.PING, pingPacketData, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(
+                Optional.ofNullable(localPeer.getEndpoint()),
+                peers.get(0).getEndpoint(),
+                UInt64.ONE);
+    final Packet pingPacket =
+        packetPackage.packetFactory().create(PacketType.PING, pingPacketData, nodeKeys.get(0));
 
     final OutboundMessageHandler outboundMessageHandler = mock(OutboundMessageHandler.class);
     controller =
@@ -1385,9 +1497,14 @@ public class PeerDiscoveryControllerTest {
     // Mock the creation of the PING packet to control hash for PONG.
     final List<NodeKey> nodeKeys = PeerDiscoveryTestHelper.generateNodeKeys(1);
     final PingPacketData pingPacketData =
-        PingPacketData.create(
-            Optional.ofNullable(localPeer.getEndpoint()), peers.get(0).getEndpoint(), UInt64.ONE);
-    final Packet pingPacket = Packet.create(PacketType.PING, pingPacketData, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(
+                Optional.ofNullable(localPeer.getEndpoint()),
+                peers.get(0).getEndpoint(),
+                UInt64.ONE);
+    final Packet pingPacket =
+        packetPackage.packetFactory().create(PacketType.PING, pingPacketData, nodeKeys.get(0));
 
     final OutboundMessageHandler outboundMessageHandler = mock(OutboundMessageHandler.class);
     controller =
@@ -1406,9 +1523,12 @@ public class PeerDiscoveryControllerTest {
         .filteredOn(p -> p.getStatus() == PeerDiscoveryStatus.BONDED)
         .contains(peers.get(0));
 
-    final ENRRequestPacketData enrRequestPacketData = ENRRequestPacketData.create();
+    final EnrRequestPacketData enrRequestPacketData =
+        packetPackage.enrRequestPacketDataFactory().create();
     final Packet enrRequestPacket =
-        Packet.create(PacketType.ENR_REQUEST, enrRequestPacketData, nodeKeys.get(0));
+        packetPackage
+            .packetFactory()
+            .create(PacketType.ENR_REQUEST, enrRequestPacketData, nodeKeys.get(0));
     controller.onMessage(enrRequestPacket, peers.get(0));
     verify(outboundMessageHandler, times(1))
         .send(any(), matchPacketOfType(PacketType.FIND_NEIGHBORS));
@@ -1427,9 +1547,12 @@ public class PeerDiscoveryControllerTest {
             .outboundMessageHandler(outboundMessageHandler)
             .build();
 
-    final ENRRequestPacketData enrRequestPacketData = ENRRequestPacketData.create();
+    final EnrRequestPacketData enrRequestPacketData =
+        packetPackage.enrRequestPacketDataFactory().create();
     final Packet packet =
-        Packet.create(PacketType.ENR_REQUEST, enrRequestPacketData, nodeKeys.get(0));
+        packetPackage
+            .packetFactory()
+            .create(PacketType.ENR_REQUEST, enrRequestPacketData, nodeKeys.get(0));
 
     controller.onMessage(packet, peers.get(0));
 
@@ -1454,22 +1577,34 @@ public class PeerDiscoveryControllerTest {
     // Mock the creation of the PING packet, so that we can control the hash, which gets validated
     // when receiving the PONG.
     final PingPacketData mockPing =
-        PingPacketData.create(
-            Optional.ofNullable(localPeer.getEndpoint()), peers.get(0).getEndpoint(), UInt64.ONE);
-    final Packet mockPacket = Packet.create(PacketType.PING, mockPing, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(
+                Optional.ofNullable(localPeer.getEndpoint()),
+                peers.get(0).getEndpoint(),
+                UInt64.ONE);
+    final Packet mockPacket =
+        packetPackage.packetFactory().create(PacketType.PING, mockPing, nodeKeys.get(0));
     mockPingPacketCreation(mockPacket);
 
     controller.start();
 
     final PongPacketData pongRequestPacketData =
-        PongPacketData.create(localPeer.getEndpoint(), mockPacket.getHash(), UInt64.ONE);
+        packetPackage
+            .pongPacketDataFactory()
+            .create(localPeer.getEndpoint(), mockPacket.getHash(), UInt64.ONE);
 
-    final ENRRequestPacketData enrRequestPacketData = ENRRequestPacketData.create();
+    final EnrRequestPacketData enrRequestPacketData =
+        packetPackage.enrRequestPacketDataFactory().create();
 
     final Packet enrPacket =
-        Packet.create(PacketType.ENR_REQUEST, enrRequestPacketData, nodeKeys.get(0));
+        packetPackage
+            .packetFactory()
+            .create(PacketType.ENR_REQUEST, enrRequestPacketData, nodeKeys.get(0));
     final Packet pongPacket =
-        Packet.create(PacketType.PONG, pongRequestPacketData, nodeKeys.get(0));
+        packetPackage
+            .packetFactory()
+            .create(PacketType.PONG, pongRequestPacketData, nodeKeys.get(0));
 
     controller.onMessage(enrPacket, peers.get(0));
     verify(outboundMessageHandler, never()).send(any(), matchPacketOfType(PacketType.ENR_RESPONSE));
@@ -1508,22 +1643,34 @@ public class PeerDiscoveryControllerTest {
     // Mock the creation of the PING packet, so that we can control the hash, which gets validated
     // when receiving the PONG.
     final PingPacketData mockPing =
-        PingPacketData.create(
-            Optional.ofNullable(localPeer.getEndpoint()), peers.get(0).getEndpoint(), UInt64.ONE);
-    final Packet mockPacket = Packet.create(PacketType.PING, mockPing, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(
+                Optional.ofNullable(localPeer.getEndpoint()),
+                peers.get(0).getEndpoint(),
+                UInt64.ONE);
+    final Packet mockPacket =
+        packetPackage.packetFactory().create(PacketType.PING, mockPing, nodeKeys.get(0));
     mockPingPacketCreation(mockPacket);
 
     controller.start();
 
     final PongPacketData pongRequestPacketData =
-        PongPacketData.create(localPeer.getEndpoint(), mockPacket.getHash(), UInt64.ONE);
+        packetPackage
+            .pongPacketDataFactory()
+            .create(localPeer.getEndpoint(), mockPacket.getHash(), UInt64.ONE);
 
-    final ENRRequestPacketData enrRequestPacketData = ENRRequestPacketData.create();
+    final EnrRequestPacketData enrRequestPacketData =
+        packetPackage.enrRequestPacketDataFactory().create();
 
     final Packet enrPacket =
-        Packet.create(PacketType.ENR_REQUEST, enrRequestPacketData, nodeKeys.get(0));
+        packetPackage
+            .packetFactory()
+            .create(PacketType.ENR_REQUEST, enrRequestPacketData, nodeKeys.get(0));
     final Packet pongPacket =
-        Packet.create(PacketType.PONG, pongRequestPacketData, nodeKeys.get(0));
+        packetPackage
+            .packetFactory()
+            .create(PacketType.PONG, pongRequestPacketData, nodeKeys.get(0));
 
     controller.onMessage(enrPacket, peers.get(0));
     enrs.cleanUp();
@@ -1606,28 +1753,37 @@ public class PeerDiscoveryControllerTest {
     // Mock the creation of the PING packet, so that we can control the hash, which gets validated
     // when receiving the PONG.
     final PingPacketData mockPing =
-        PingPacketData.create(
-            Optional.ofNullable(localPeer.getEndpoint()), sender.getEndpoint(), UInt64.ONE);
-    final Packet mockPacket = Packet.create(PacketType.PING, mockPing, nodeKeys.get(0));
+        packetPackage
+            .pingPacketDataFactory()
+            .create(Optional.ofNullable(localPeer.getEndpoint()), sender.getEndpoint(), UInt64.ONE);
+    final Packet mockPacket =
+        packetPackage.packetFactory().create(PacketType.PING, mockPing, nodeKeys.get(0));
     mockPingPacketCreation(mockPacket);
 
     controller.start();
 
     final PongPacketData pongRequestPacketData =
-        PongPacketData.create(localPeer.getEndpoint(), mockPacket.getHash(), UInt64.ONE);
+        packetPackage
+            .pongPacketDataFactory()
+            .create(localPeer.getEndpoint(), mockPacket.getHash(), UInt64.ONE);
 
     final Packet pongPacket =
-        Packet.create(PacketType.PONG, pongRequestPacketData, nodeKeys.get(0));
+        packetPackage
+            .packetFactory()
+            .create(PacketType.PONG, pongRequestPacketData, nodeKeys.get(0));
 
     controller.onMessage(pongPacket, sender);
 
     final NodeRecord nodeRecord = createNodeRecord(nodeKeys.get(0), sendForkId);
 
-    final ENRResponsePacketData enrResponsePacketData =
-        ENRResponsePacketData.create(
-            packetTypeBytesHashMap.get(PacketType.ENR_REQUEST), nodeRecord);
+    final EnrResponsePacketData enrResponsePacketData =
+        packetPackage
+            .enrResponsePacketDataFactory()
+            .create(packetTypeBytesHashMap.get(PacketType.ENR_REQUEST), nodeRecord);
     final Packet enrPacket =
-        Packet.create(PacketType.ENR_RESPONSE, enrResponsePacketData, nodeKeys.get(0));
+        packetPackage
+            .packetFactory()
+            .create(PacketType.ENR_RESPONSE, enrResponsePacketData, nodeKeys.get(0));
     return enrPacket;
   }
 
@@ -1675,12 +1831,13 @@ public class PeerDiscoveryControllerTest {
     return nodeRecord;
   }
 
-  private static Packet mockPingPacket(final DiscoveryPeer from, final DiscoveryPeer to) {
+  private Packet mockPingPacket(final DiscoveryPeer from, final DiscoveryPeer to) {
     final Packet packet = mock(Packet.class);
 
     final PingPacketData pingPacketData =
-        PingPacketData.create(
-            Optional.ofNullable(from.getEndpoint()), to.getEndpoint(), UInt64.ONE);
+        packetPackage
+            .pingPacketDataFactory()
+            .create(Optional.ofNullable(from.getEndpoint()), to.getEndpoint(), UInt64.ONE);
     when(packet.getPacketData(any())).thenReturn(Optional.of(pingPacketData));
     final Bytes id = from.getId();
     when(packet.getNodeId()).thenReturn(id);
